--- a/Views/Home/_responsiveGrid.cshtml
+++ b/Views/Home/_responsiveGrid.cshtml
@@ -72,7 +72,7 @@ Html.DevExpress().GridView(settings =>
     {
         column.Name = "Filter";
         column.FieldName = "Filter";
-        column.GroupIndex = 0;
+        //column.GroupIndex = 0;
         column.Caption = "Filter";
 
     });
@@ -147,7 +147,7 @@ Html.DevExpress().GridView(settings =>
 
     settings.Columns.Add(column =>
     {
-        column.FieldName = "PaymentStatusDisplay";
+        //column.FieldName = "PaymentStatusDisplay";
 
         column.SetDataItemTemplateContent(dataTemplate =>
         {
